fix notation feature on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -68,6 +68,14 @@ body {
       width: 220px;
       flex-direction: row;
       margin: 5px;
+      &:hover {
+        z-index: 2;
+        transform: scale(1.25);
+        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.15),
+          0 10px 10px rgba(0, 0, 0, 0.22), 0 0 5px 2px rgb(255, 255, 255, 0.6),
+          0 0 10px 5px rgb(178, 26, 224);
+        border-radius: 8px;
+      }
       @media (max-width: 1140px) {
         width: 110px;
       }
@@ -93,14 +101,13 @@ body {
         right: 13%;
         background-color: gray;
         z-index: 999;
-      }
-      // cards hover effect, little bit of work required, like flam, glow or shiny effect
-      img:hover {
-        z-index: 2;
-        transform: scale(1.25);
-        box-shadow: 0 14px 28px rgba(0, 0, 0, 0.15),
-          0 10px 10px rgba(0, 0, 0, 0.22), 0 0 5px 2px rgb(255, 255, 255, 0.6),
-          0 0 10px 5px rgb(178, 26, 224);
+        @media screen and (max-width: 1100px) {
+          @include mobile;
+          font-size: 10px;
+          position: absolute;
+          width: 20%;
+          height: 12%;
+        }
       }
     }
   }
